[gd_scene load_steps=48 format=3 uid="uid://b2edwi7wulkxq"]

[ext_resource type="Script" path="res://characters/enemies/melee/chaser_minion.gd" id="1_bgrwq"]
[ext_resource type="ArrayMesh" uid="uid://bptnevpcunpnm" path="res://assets/objects/weapons/grass_hockey_bat/grass_hockey.res" id="2_bvm3m"]
[ext_resource type="Script" path="res://characters/enemies/melee/weapon.gd" id="3_ry063"]
[ext_resource type="Material" uid="uid://yy4wl7opy4lu" path="res://assets/objects/explosion/SmokeExplosion.material" id="4_bwu78"]
[ext_resource type="ArrayMesh" uid="uid://chs03lfaocohd" path="res://assets/objects/explosion/explosion_bits_B.res" id="5_0c0lb"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="5_s2oxv"]
[ext_resource type="PackedScene" uid="uid://duds002tisele" path="res://characters/enemies/melee/minion/small_ennemy_animated.glb" id="6_6ov1q"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="6_tk8b7"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/is_dead.gd" id="7_gu6mg"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="8_cimi7"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/health_below_zero.gd" id="9_8e7t0"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/play_death.gd" id="10_eqn7w"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/inverter.gd" id="11_206iy"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/is_idling.gd" id="12_u2ln2"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/player_is_detected.gd" id="13_18vcj"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/play_idle.gd" id="14_elj12"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/player_is_in_reach.gd" id="15_tm7gm"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/succeeder.gd" id="16_3y1g4"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/stop_cool_attack_down.gd" id="17_cc4o7"]
[ext_resource type="Script" path="res://characters/enemies/melee/minion/reach_player.gd" id="18_64kpj"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1hmg7"]
animation = &"Hit-impact"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a2nrj"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h4w4y"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wcs7x"]
animation = &"Killed-impact"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_xdwv5"]
filter_enabled = true
filters = ["../..", "Skeleton3D:DEF-Blindfold", "Skeleton3D:DEF-forearm.R", "Skeleton3D:DEF-forearm.R.001", "Skeleton3D:DEF-hand.R", "Skeleton3D:DEF-shoulder.R", "Skeleton3D:DEF-spine", "Skeleton3D:DEF-spine.001", "Skeleton3D:DEF-spine.002", "Skeleton3D:DEF-spine.003", "Skeleton3D:DEF-spine.004", "Skeleton3D:DEF-spine.005", "Skeleton3D:DEF-spine.006", "Skeleton3D:DEF-upper_arm.R", "Skeleton3D:DEF-upper_arm.R.001", "Skeleton3D:DEF-weapon-anchor"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_sf8yh"]
filter_enabled = true
filters = ["Skeleton3D/Body_001:material_overlay", "Skeleton3D/Body_001:material_overlay:albedo_color", "Skeleton3D/Body_001:surface_material_override/0", "Skeleton3D:DEF-Blindfold", "Skeleton3D:DEF-spine.005", "Skeleton3D:DEF-spine.006"]
mix_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ce2nm"]
animation = &"Run"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_wld3h"]
xfade_time = 0.1
input_0/name = "Idling"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Running"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "Dying"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_o08rm"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_1hmg7")
nodes/Animation/position = Vector2(600, 480)
nodes/attack/node = SubResource("AnimationNodeAnimation_a2nrj")
nodes/attack/position = Vector2(380, 480)
nodes/idle/node = SubResource("AnimationNodeAnimation_h4w4y")
nodes/idle/position = Vector2(30, 140)
nodes/killed/node = SubResource("AnimationNodeAnimation_wcs7x")
nodes/killed/position = Vector2(160, 460)
nodes/on_attacking/node = SubResource("AnimationNodeOneShot_xdwv5")
nodes/on_attacking/position = Vector2(580, 160)
nodes/on_hit/node = SubResource("AnimationNodeOneShot_sf8yh")
nodes/on_hit/position = Vector2(780, 140)
nodes/output/position = Vector2(980, 160)
nodes/run/node = SubResource("AnimationNodeAnimation_ce2nm")
nodes/run/position = Vector2(-40, 300)
nodes/state/node = SubResource("AnimationNodeTransition_wld3h")
nodes/state/position = Vector2(410, 150)
node_connections = [&"on_attacking", 0, &"state", &"on_attacking", 1, &"attack", &"on_hit", 0, &"on_attacking", &"on_hit", 1, &"Animation", &"output", 0, &"on_hit", &"state", 0, &"idle", &"state", 1, &"run", &"state", 2, &"killed"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_khqmx"]
radius = 1.30422
height = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_hsi84"]
radius = 200.0

[sub_resource type="SphereShape3D" id="SphereShape3D_vfolx"]
radius = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2ue0h"]
radius = 0.56734

[sub_resource type="Curve" id="Curve_hhmyj"]
_data = [Vector2(0, 1), 0.0, -0.209878, 0, 0, Vector2(1, 0), -3.09458, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7der6"]
curve = SubResource("Curve_hhmyj")

[sub_resource type="Gradient" id="Gradient_y2pog"]
offsets = PackedFloat32Array(0, 0.466667, 1)
colors = PackedColorArray(1, 0.77664, 0.532883, 1, 1, 0.452615, 0.250092, 1, 0.418536, 0.258217, 0.203763, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ee05i"]
gradient = SubResource("Gradient_y2pog")

[sub_resource type="Curve" id="Curve_137f5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.538461), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_a3wc3"]
curve = SubResource("Curve_137f5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mkqib"]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 2, 0)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_a3wc3")
color = Color(0.85301, 0.762545, 0.740656, 1)
color_ramp = SubResource("GradientTexture1D_ee05i")
alpha_curve = SubResource("CurveTexture_7der6")

[sub_resource type="SphereMesh" id="SphereMesh_nrawn"]
material = ExtResource("4_bwu78")

[sub_resource type="Curve" id="Curve_7hyx8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.631285, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_p41r3"]
curve = SubResource("Curve_7hyx8")

[sub_resource type="Curve" id="Curve_l6dqp"]
_data = [Vector2(0, 1), 0.0, -4.28403, 0, 0, Vector2(0.73029, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_g55m5"]
curve = SubResource("Curve_l6dqp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sx1j5"]
lifetime_randomness = 0.22
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 1, 10)
spread = 67.693
initial_velocity_min = 10.0
initial_velocity_max = 10.0
angular_velocity_min = -300.0
angular_velocity_max = 300.0
angular_velocity_curve = SubResource("CurveTexture_p41r3")
radial_velocity_min = 9.99998
radial_velocity_max = 30.0
radial_velocity_curve = SubResource("CurveTexture_g55m5")
tangential_accel_min = -2.23517e-06
tangential_accel_max = -2.23517e-06
attractor_interaction_enabled = false
scale_min = 0.8
scale_max = 1.2
collision_mode = 1
collision_friction = 0.1
collision_bounce = 0.12

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_chcap"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity_for_animations")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("RadiusMesh:visible")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_exploding")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Enemy_Minion" type="CharacterBody3D"]
collision_layer = 16
collision_mask = 27
script = ExtResource("1_bgrwq")
movement_speed = 14.0
explosion_delay = 1.0
explosion_damage = 5.0
explosion_radius = 7.0
explosion_movement_speed = 0.5

[node name="AnimationTree" type="AnimationTree" parent="."]
process_mode = 1
root_node = NodePath("../MeleeSkin/Skin")
tree_root = SubResource("AnimationNodeBlendTree_o08rm")
anim_player = NodePath("../MeleeSkin/Skin/AnimationPlayer")
parameters/on_attacking/active = false
parameters/on_attacking/internal_active = false
parameters/on_attacking/request = 0
parameters/on_hit/active = false
parameters/on_hit/internal_active = false
parameters/on_hit/request = 0
parameters/state/current_state = "Dying"
parameters/state/transition_request = ""
parameters/state/current_index = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_khqmx")

[node name="HitArea" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.230515)
shape = SubResource("CapsuleShape3D_khqmx")

[node name="DetectionRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionRange"]
shape = SubResource("SphereShape3D_hsi84")

[node name="AttackRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("SphereShape3D_vfolx")

[node name="WeaponAnchor" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.393252, -0.0232529, 0.919137, 0.750542, 0.585546, -0.306305, -0.531074, 0.810306, 0.247719, -0.477003, 0.381067, -6.0132)
bone_name = "DEF-weapon-anchor"
bone_idx = 25
use_external_skeleton = true
external_skeleton = NodePath("../MeleeSkin/Skin/Skeleton3D")

[node name="Weapon" type="MeshInstance3D" parent="WeaponAnchor" node_paths=PackedStringArray("hit_area")]
visible = false
mesh = ExtResource("2_bvm3m")
script = ExtResource("3_ry063")
hit_area = NodePath("AttackHitArea")

[node name="AttackHitArea" type="Area3D" parent="WeaponAnchor/Weapon"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 1.11759e-08, 2.80233, -0.329513)
collision_layer = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="WeaponAnchor/Weapon/AttackHitArea"]
transform = Transform3D(1, 1.49012e-08, -8.84756e-09, 0, 1, -2.8871e-08, -2.35625e-07, -4.19095e-08, 1, 2.16465e-08, -0.672331, 3.56276e-08)
shape = SubResource("SphereShape3D_2ue0h")

[node name="MeleeSkin" type="Node3D" parent="."]
process_mode = 1

[node name="DustParticles" type="GPUParticles3D" parent="MeleeSkin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.98181)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_mkqib")
draw_pass_1 = SubResource("SphereMesh_nrawn")

[node name="BlindfoldParticles" type="GPUParticles3D" parent="MeleeSkin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.95838, -1.63399)
emitting = false
amount = 6
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_sx1j5")
draw_pass_1 = ExtResource("5_0c0lb")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="MeleeSkin/BlindfoldParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.95838, 1.63399)
size = Vector3(40.3376, 0.979858, 53.9834)

[node name="Skin" parent="MeleeSkin" instance=ExtResource("6_6ov1q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="Skeleton3D" parent="MeleeSkin/Skin" index="0"]
bones/0/position = Vector3(-6.77938e-16, 0.837668, -0.0172)
bones/0/rotation = Quaternion(0.0365648, 1.1913e-07, 4.35883e-09, 0.999331)
bones/0/scale = Vector3(1.03246, 0.938107, 1.03246)
bones/1/position = Vector3(1.77636e-15, 1.06694, -0.00040001)
bones/1/rotation = Quaternion(-0.0433552, 2.08308e-14, 1.77339e-14, 0.99906)
bones/1/scale = Vector3(1.04667, 0.993625, 1.04667)
bones/2/position = Vector3(1.77636e-15, 1.30225, -0.020862)
bones/2/rotation = Quaternion(-0.0449965, -1.32349e-22, -5.55865e-22, 0.998987)
bones/2/scale = Vector3(1.05736, 1.05736, 1.05736)
bones/3/position = Vector3(1.77636e-15, 1.4852, -0.0373759)
bones/3/rotation = Quaternion(0.17338, 1.17404e-07, 2.06683e-08, 0.984855)
bones/3/scale = Vector3(1, 0.999999, 1)
bones/4/position = Vector3(1.21014e-14, 1.52176, -0.0240888)
bones/4/rotation = Quaternion(0.119332, 5.92946e-08, 7.12654e-09, 0.992854)
bones/4/scale = Vector3(0.999998, 1, 0.999998)
bones/5/position = Vector3(1.9686e-14, 1.54998, -0.0172062)
bones/5/rotation = Quaternion(0.00557512, 1.19207e-07, 6.64594e-10, 0.999985)
bones/6/position = Vector3(0.00804865, 2.20679, -0.0716002)
bones/6/rotation = Quaternion(0.707107, -3.09139e-08, -3.09034e-08, 0.707107)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(0.272071, 0.492296, 0.00809995)
bones/7/rotation = Quaternion(0.996058, 0.0108568, 0.065085, 0.0592819)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(0.274458, 0.322008, 0.0285999)
bones/8/rotation = Quaternion(0.993434, 0.0206652, 0.0626652, -0.0934647)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(0.280913, 0.201921, 0.0062)
bones/9/rotation = Quaternion(0.993434, 0.0206651, 0.0626651, -0.0934647)
bones/9/scale = Vector3(1, 1, 0.999997)
bones/10/position = Vector3(0.287369, 0.0818337, -0.0161999)
bones/10/rotation = Quaternion(0.786413, -0.000941748, -0.00119889, 0.617699)
bones/10/scale = Vector3(1, 1, 0.999995)
bones/11/position = Vector3(0.287369, 0.00856141, 0.284299)
bones/11/rotation = Quaternion(-4.8568e-09, 0.707107, 0.707107, -4.8568e-09)
bones/12/position = Vector3(-0.272071, 0.492296, 0.0081)
bones/12/rotation = Quaternion(0.996058, -0.0108568, -0.065085, 0.0592821)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-0.274458, 0.322008, 0.0286)
bones/13/rotation = Quaternion(0.993434, -0.0206652, -0.0626652, -0.0934649)
bones/13/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(-0.280913, 0.201921, 0.00620005)
bones/14/rotation = Quaternion(0.993434, -0.0206651, -0.062665, -0.093465)
bones/14/scale = Vector3(1, 1, 0.999998)
bones/15/position = Vector3(-0.287369, 0.0818337, -0.0161999)
bones/15/rotation = Quaternion(0.786413, -0.000940304, -0.00119721, 0.617699)
bones/15/scale = Vector3(1, 1, 0.999995)
bones/16/position = Vector3(-0.287369, 0.0085614, 0.284299)
bones/16/rotation = Quaternion(-5.02144e-09, 0.707107, 0.707107, -5.02144e-09)
bones/17/position = Vector3(0.490608, 1.19054, -0.0933593)
bones/17/rotation = Quaternion(0.147471, 0.170723, -0.930557, 0.288392)
bones/17/scale = Vector3(1.00434, 0.991377, 1.00434)
bones/18/position = Vector3(0.610978, 1.03157, -0.141065)
bones/18/rotation = Quaternion(0.266922, -0.137879, -0.931721, 0.204054)
bones/18/scale = Vector3(1.00493, 0.990217, 1.00493)
bones/19/position = Vector3(0.667041, 0.870912, -0.0741731)
bones/19/rotation = Quaternion(0.326199, -0.124492, -0.912659, 0.212486)
bones/19/scale = Vector3(1.00493, 0.990216, 1.00493)
bones/20/position = Vector3(0.723104, 0.710257, -0.00728162)
bones/20/rotation = Quaternion(0.403011, -0.0781904, -0.909163, 0.0699413)
bones/21/position = Vector3(-0.483298, 1.1895, -0.0992279)
bones/21/rotation = Quaternion(0.150592, -0.184589, 0.933391, 0.268385)
bones/21/scale = Vector3(1.00905, 0.982149, 1.00905)
bones/22/position = Vector3(-0.596357, 1.02948, -0.152802)
bones/22/rotation = Quaternion(0.306047, 0.28518, 0.900224, 0.120852)
bones/22/scale = Vector3(1.01035, 0.979612, 1.01035)
bones/23/position = Vector3(-0.60414, 0.883308, -0.0465521)
bones/23/rotation = Quaternion(0.239807, 0.293209, 0.920087, 0.0998048)
bones/23/scale = Vector3(1.01035, 0.979612, 1.01035)
bones/24/position = Vector3(-0.611924, 0.737137, 0.0596975)
bones/24/rotation = Quaternion(0.179163, 0.329976, 0.925146, 0.0558704)
bones/25/position = Vector3(-0.477003, 0.381067, -0.0131984)
bones/25/rotation = Quaternion(0.374161, 0.485946, 0.259288, 0.746076)
bones/27/position = Vector3(-2.75956e-15, 0.634148, -0.0552)
bones/27/rotation = Quaternion(0.0921633, 1.18702e-07, 1.09867e-08, 0.995744)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-1.84379e-08, 0.634148, -0.0552)
bones/28/rotation = Quaternion(-0.28745, -0.624442, -0.495661, 0.530815)
bones/28/scale = Vector3(1, 1, 1)
bones/29/position = Vector3(1.85131e-08, 0.634148, -0.0552)
bones/29/rotation = Quaternion(-0.28745, 0.624442, 0.495661, 0.530815)
bones/29/scale = Vector3(1, 1, 1)
bones/30/position = Vector3(0.269685, 0.662584, -0.0124)
bones/30/rotation = Quaternion(0.996058, 0.0108568, 0.065085, 0.059282)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(-0.269685, 0.662584, -0.0124)
bones/31/rotation = Quaternion(0.996058, -0.0108568, -0.065085, 0.0592821)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(0.0193497, 1.49428, 0.0466146)
bones/32/rotation = Quaternion(0.683342, 0.37873, 0.452986, -0.429431)
bones/32/scale = Vector3(1.05736, 1.05736, 1.05736)
bones/33/position = Vector3(0.370239, 1.34951, -0.0456539)
bones/33/rotation = Quaternion(0.113516, 0.160117, -0.935306, 0.294413)
bones/33/scale = Vector3(1.00434, 0.991377, 1.00434)
bones/34/position = Vector3(-0.0193497, 1.49428, 0.0466146)
bones/34/rotation = Quaternion(0.683342, -0.37873, -0.452986, -0.429431)
bones/34/scale = Vector3(1.05736, 1.05736, 1.05736)
bones/35/position = Vector3(-0.370239, 1.34951, -0.045654)
bones/35/rotation = Quaternion(0.102558, -0.170592, 0.939882, 0.277492)
bones/35/scale = Vector3(1.00905, 0.982149, 1.00905)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.0
debug_path_custom_color = Color(0.595041, 0.133162, 0.133162, 1)
debug_path_custom_point_size = 10.04

[node name="BeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("5_s2oxv")
actor_node_path = NodePath("..")
blackboard = NodePath("@Node@17297")
actor = NodePath("..")

[node name="SelectBehaviour" type="Node" parent="BeehaveTree"]
script = ExtResource("6_tk8b7")

[node name="IsDead" type="Node" parent="BeehaveTree/SelectBehaviour"]
script = ExtResource("7_gu6mg")

[node name="GoToDie" type="Node" parent="BeehaveTree/SelectBehaviour"]
script = ExtResource("8_cimi7")

[node name="HealthBelowZero" type="Node" parent="BeehaveTree/SelectBehaviour/GoToDie"]
script = ExtResource("9_8e7t0")

[node name="PlayDeath" type="Node" parent="BeehaveTree/SelectBehaviour/GoToDie"]
script = ExtResource("10_eqn7w")

[node name="GoToIdle" type="Node" parent="BeehaveTree/SelectBehaviour"]
script = ExtResource("8_cimi7")

[node name="IsNotIdling" type="Node" parent="BeehaveTree/SelectBehaviour/GoToIdle"]
script = ExtResource("11_206iy")

[node name="IsIdling" type="Node" parent="BeehaveTree/SelectBehaviour/GoToIdle/IsNotIdling"]
script = ExtResource("12_u2ln2")

[node name="PlayerIsNotDetected" type="Node" parent="BeehaveTree/SelectBehaviour/GoToIdle"]
script = ExtResource("11_206iy")

[node name="PlayerIsDetected" type="Node" parent="BeehaveTree/SelectBehaviour/GoToIdle/PlayerIsNotDetected"]
script = ExtResource("13_18vcj")

[node name="PlayIdle" type="Node" parent="BeehaveTree/SelectBehaviour/GoToIdle"]
script = ExtResource("14_elj12")

[node name="GoToReach" type="Node" parent="BeehaveTree/SelectBehaviour"]
script = ExtResource("8_cimi7")

[node name="PlayerIsDetected" type="Node" parent="BeehaveTree/SelectBehaviour/GoToReach"]
script = ExtResource("13_18vcj")

[node name="PlayerNotInReach" type="Node" parent="BeehaveTree/SelectBehaviour/GoToReach"]
script = ExtResource("11_206iy")

[node name="PlayerIsInReach" type="Node" parent="BeehaveTree/SelectBehaviour/GoToReach/PlayerNotInReach"]
script = ExtResource("15_tm7gm")

[node name="TryStopAttackCooldown" type="Node" parent="BeehaveTree/SelectBehaviour/GoToReach"]
script = ExtResource("16_3y1g4")

[node name="StopCoolAttackDown" type="Node" parent="BeehaveTree/SelectBehaviour/GoToReach/TryStopAttackCooldown"]
script = ExtResource("17_cc4o7")

[node name="ReachPlayer" type="Node" parent="BeehaveTree/SelectBehaviour/GoToReach"]
script = ExtResource("18_64kpj")

[node name="RadiusMesh" type="MeshInstance3D" parent="."]

[node name="EnemySynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_chcap")

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]

[editable path="MeleeSkin/Skin"]
